# tablut.cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: gh-pages.yml
src/: CMakeLists.txt  actions.cpp  common.cpp  game.cpp  result.cpp  state.cpp
src/adversarialSearch/: CMakeLists.txt  utilities.cpp
src/adversarialSearch/include/adversarialSearch/: bns.h  iteDeepAlphaBetaSearch.h  ite_minmax.h  ite_minmax_p.h  ite_minmax_pq.h  ite_minmax_ptt.h  mtd.h  parIteDABSearch.h  parIteDABSearch_tt.h  quiescence.h  t_table.h  utilities.h  vgame.h
src/ashtonTablut/: CMakeLists.txt  actions.cpp  common.cpp  game.cpp  heuristics.cpp  result.cpp  state.cpp
src/ashtonTablut/include/: common.h  result.h  state.h
src/ashtonTablut/include/tablut/: actions.h  common.h  customSearch.h  customSearch2.h  customSearch_tt.h  custom_mtd.h  game.h  heuristics.h  state.h
src/client/: CMakeLists.txt  Player1.cpp  aiPlayer.cpp  aiPlayer2.cpp  customSearch.cpp  randomClient.cpp
src/include/: actions.h  result.h  state.h
src/serverConnection/: CMakeLists.txt  gsonExamples.txt  serverComunicator.cpp  simpleJson.cpp
src/serverConnection/include/serverConnection/: serverComunicator.h  simpleJson.h
src/wasm/: CMakeLists.txt  tablut_wasm.cpp
test/: CMakeLists.txt  actions_test.cpp  result_test.cpp  state_test.cpp
test/adversarialSearch/: CMakeLists.txt  new_test.cpp  t_table_test.cpp  timer_test.cpp  utilities_test.cpp
test/ashtonTablut/: CMakeLists.txt  actions_test.cpp  game_test.cpp  heuristics_test.cpp  result_test.cpp  state_test.cpp
test/serverConnection/: CMakeLists.txt  simpleJson_test.cpp
web/: index.html  package.json  vite.config.js
web/public/favicon/: site.webmanifest
web/public/sounds-effect/: juniorsoundays-ui-sound-101-movepiece.opus
web/scripts/: copy-coi.js  copy-wasm.js
web/src/: App.jsx  aiWorker.js  constants.js  styles.css  utils.js
web/src/components/: Board.jsx  BoardCell.jsx  Controls.jsx  Footer.jsx  GameOverModal.jsx  Header.jsx  Legend.jsx  PlayControls.jsx  RulesModal.jsx  index.js
